# txttmd

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
config/: config.yaml.example
docker/: Dockerfile  docker-compose.yml
scripts/: notectl.sh
src/: __init__.py  config.py  file_handler.py  file_monitor.py  main.py  note_processor.py
src/cli/: __init__.py  notectl.py
src/setup/: __init__.py  reconfigure.py  wizard.py
